[gd_scene load_steps=8 format=2]

[ext_resource path="res://нож1_сжато.png" type="Texture" id=1]
[ext_resource path="res://knife.gd" type="Script" id=2]
[ext_resource path="res://нож1_подсветка.png" type="Texture" id=3]
[ext_resource path="res://sound/Нож режет2.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/Нож режет1.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75.3945, 147.59 )

[node name="Knife" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.89075, -5.67224 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="knifeSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="knifeSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="input_event" from="." to="." method="_on_Knife_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Knife_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Knife_mouse_exited"]
